# Claude-Notion

./: .gitignore  AUDITORIA_BUGS_2026-04-29.md  CHANGELOG_ROUND_1.md  CHANGELOG_ROUND_2.md  DESIGN_SCHEMA_DINAMICO.md  README.md  RELATORIO_AUDITORIA_OPERACIONAL.md  build.py  pyproject.toml  requirements.txt
chats/: chat1.md
docs/: anatomia-publicacoes-pos-round-4.md  round-5-fix-regressoes-p0.md  round-6-auditoria.md  round-6-status.md
notion_bulk_edit/: config.py  encoders.py  gerar_template.py  main.py  notion_api.py  resolvers.py  schema_parser.py  schema_registry.py  schemas.py  token_store.py  validators.py
notion_rpadv/: __main__.py  _debug_dump.py  app.py  layout_defaults.py
project/: base-table.jsx  data.js  pages-bases.jsx  shared.jsx
scripts/: bench_fase_3_perf.py  dump_schema_options.py  inspecionar_smoke_round_6.py  inspecionar_smoke_v8.py  reset_estado_leitor_round_6.py  resync_partes_round_5.py  setar_cursor_pre_smoke.py  validar_fase_0.py  validar_fase_2a.py  validar_fase_2b.py  validar_fase_2c.py  validar_fase_2d.py  validar_fase_3.py  validar_fase_4.py
tests/: conftest.py  smoke_test_round_1.py  test_audit_smoke.py  test_auditoria_lote_1.py  test_auditoria_lote_2.py  test_chip_colors.py  test_critical_bugs.py  test_datajud_client.py  test_datajud_enricher.py  test_delegate_initstyleoption.py  test_dje_advogados.py  test_dje_client.py  test_dje_db.py  test_dje_exporter.py  test_dje_integracao_fase3.py  test_dje_notion_mapper.py  test_dje_notion_sync.py  test_dje_processos.py  test_dje_state.py  test_dje_transform.py  test_exec_bugs.py  (+24 more)
(+86 files in other folders)
